sfdx-source/packaged/main/core/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <label>Invoice</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>