sfdx-source/packaged/main/core/objects/Invoice__c/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <description>Billing City of this invoice. Copied from Account&#39;s Billing Address when created</description>
    <inlineHelpText>Is copied from the Account&#39;s Billing Address</inlineHelpText>
    <label>Billing City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>