sfdx-source/packaged/main/core/objects/Invoice__c/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <description>Billing Country of this invoice. Copied from Account&#39;s Billing Address when created</description>
    <inlineHelpText>Is copied from the Account&#39;s Billing Address</inlineHelpText>
    <label>Billing Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>