sfdx-source/packaged/main/core/objects/Invoice__c/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <description>Billing Postalcode of this invoice. Copied from Account's Billing Address when created</description>
    <inlineHelpText>Is copied from the Account's Billing Address</inlineHelpText>
    <label>Billing Postal Code</label>
    <type>Text</type>
    <length>50</length>
</CustomField>