sfdx-source/packaged/main/core/objects/Invoice__c/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <description>Billing State of this invoice. Copied from Account's Billing Address when created</description>
    <inlineHelpText>Is copied from the Account's Billing Address</inlineHelpText>
    <label>Billing State</label>
    <type>Text</type>
    <length>100</length>
</CustomField>