sfdx-source/packaged/main/core/objects/Invoice__c/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <description>Billing Street of this invoice. Copied from Account&#39;s Billing Address when created</description>
    <inlineHelpText>Is copied from the Account&#39;s Billing Address</inlineHelpText>
    <label>Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>