sfdx-source/packaged/main/core/objects/Invoice__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for invoice PDF send options to display a filtered lookup field for contacts. This field is not used on the invoice layout and never populated.</description>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact has different Account than the Invoice.</errorMessage>
        <filterItems>
            <field>Contact.IsBillingContact__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>