sfdx-source/packaged/main/core/objects/Invoice__c/fields/OrganizationProfile__c.field-meta.xml
<CustomField>
    <fullName>OrganizationProfile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The organization profile that is used to render the PDF and where the Invoice is billed for</description>
    <label>Organization Profile</label>
    <referenceTo>OrganizationProfile__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>