sfdx-source/packaged/main/core/objects/Invoice__c/fields/PdfLanguage__c.field-meta.xml
<CustomField>
    <fullName>PdfLanguage__c</fullName>
    <label>Language (PDF)</label>
    <inlineHelpText>Set the languge of the rendered PDF</inlineHelpText>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <label>German (Germany)</label>
                <default>true</default>
                <fullName>de_DE</fullName>
            </value>
            <value>
                <label>English (Germany)</label>
                <fullName>en_DE</fullName>
            </value>
            <value>
                <label>English (USA)</label>
                <fullName>en_US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>