sfdx-source/packaged/main/core/objects/Invoice__c/fields/PdfRenderTimesheet__c.field-meta.xml
<CustomField>
    <fullName>PdfRenderTimesheet__c</fullName>
    <description>Pdf Control to render the invoice's timesheet</description>
    <inlineHelpText>Activate to add the timesheet to PDF</inlineHelpText>
    <label>Show Timesheet (PDF)</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>