sfdx-source/packaged/main/core/objects/Invoice__c/fields/PDFSyncSettings__c.field-meta.xml
<CustomField>
    <fullName>PDFSyncSettings__c</fullName>
    <description>Controls how the rendered PDF is handled. None: Nothing happens, Delete: Any changes will delete all PDFs, Sync: Changes will cause an async re-render.</description>
    <inlineHelpText>Select, how changes on relevant data is handled</inlineHelpText>
    <label>PDF Sync Settings</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deactivated</fullName>
                <default>true</default>
                <label>Deactivated</label>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>