sfdx-source/packaged/main/core/objects/Invoice__c/fields/RenderTimesheetInPdf__c.field-meta.xml
<CustomField>
    <fullName>RenderTimesheetInPdf__c</fullName>
    <description>Pdf Control to render the invoice's timesheet</description>
    <inlineHelpText>Activate to add the timesheet to PDF</inlineHelpText>
    <label>Render Timesheet in PDF</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>