sfdx-source/packaged/main/core/objects/Invoice__c/fields/ServicePeriodFrom__c.field-meta.xml
<CustomField>
    <fullName>ServicePeriodFrom__c</fullName>
    <description>The start date of covered service period for this invoice</description>
    <inlineHelpText>Start date of service period</inlineHelpText>
    <label>Service Period Start</label>
    <type>Date</type>
</CustomField>