sfdx-source/packaged/main/core/objects/Invoice__c/fields/ServicePeriodTo__c.field-meta.xml
<CustomField>
    <fullName>ServicePeriodTo__c</fullName>
    <description>The end date of covered service period for this invoice</description>
    <inlineHelpText>End date of service period</inlineHelpText>
    <label>Service Period End</label>
    <type>Date</type>
</CustomField>