sfdx-source/packaged/main/core/objects/Invoice__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <label>Total Amount (Net)</label>
    <summarizedField>InvoiceLineItem__c.Amount__c</summarizedField>
    <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>